# rust-langgang

./: .gitignore  Cargo.toml  EXTENDING.md  Makefile  PLAN.md  README.md  USAGE.md
.devcontainer/: README.md  devcontainer.json  post-create.sh
.githooks/: pre-push
.github/workflows/: ci.yml
crates/ai-core/: Cargo.toml
crates/ai-core/examples/: chat.rs  pipeline.rs  streaming.rs
crates/ai-core/src/: agent.rs  auth.rs  error.rs  history.rs  lib.rs  mcp.rs  memory.rs  message.rs  middleware.rs  model.rs  request.rs  response.rs  runnable.rs  stream.rs  structured.rs  tool.rs  trace.rs
crates/ai-core/src/providers/: mod.rs  openai.rs
crates/ai-core/tests/: agent.rs  core.rs  history.rs  mcp.rs  middleware.rs  openai.rs  runnable.rs  smoke.rs  trace.rs
docs/: web-ui-smoke-test.md
examples/mcp/: Cargo.toml  README.md
examples/tui/: Cargo.toml  README.md
examples/tui/src/: app.rs  main.rs  ui.rs
examples/web-ui/: README.md
examples/web-ui/backend/: .gitignore  Cargo.toml
examples/web-ui/backend/src/: main.rs  mcp.rs
examples/web-ui/frontend/: index.html  package-lock.json  package.json
examples/web-ui/frontend/src/: App.css  App.tsx  api.ts  types.ts
examples/web-ui/frontend/src/components/: Feature.tsx
examples/web-ui/frontend/src/pages/: Agent.tsx  Chat.tsx  Logging.tsx  Mcp.tsx  Memory.tsx  Overview.tsx  Structured.tsx
