[package]
name = "ai-core-mcp-demo"
version = "0.1.0"
edition = "2021"

# Two binaries: `mcp-server` (a minimal Streamable-HTTP MCP server) and
# `mcp-agent` (an ai-core Agent that consumes the server's tools).
[[bin]]
name = "mcp-server"
path = "src/bin/server.rs"

[[bin]]
name = "mcp-agent"
path = "src/bin/agent.rs"

[dependencies]
ai-core = { path = "../../crates/ai-core", features = ["openai"] }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
