[package]
name = "ai-core-tui-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
ai-core = { path = "../../crates/ai-core", features = ["openai"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"

# TUI deps
ratatui = "0.29"
crossterm = "0.29"
