[package]
name = "webui-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
ai-core = { path = "../../../crates/ai-core", features = ["openai", "schema"] }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
async-stream = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite"] }
